--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Footer */
 #icons {
-    padding-top: 1vh;
+    padding-top: 1vw;
 }
 #icons img {
     width: 1rem;
