--- a/style.css
+++ b/style.css
@@ -31,13 +31,17 @@ h1, h2, h3, h4, h5, h6 {
     padding-top: 1vw;
     padding-bottom: 1vw;
 }
+h2 {
+    font-size: 1.2rem;
+    font-weight: bold;
+}
 
 /* Estilo Específico */
 #introducao {
     width: 45vw;
 }
 #introducao h1 {
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-weight: bold;
 }
 #introducao p {
