--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ header {
 }
 main {
     padding: 5vw;
-    display: flex;
+    display: block;
+    color: #3C3C3C;
 }
 footer {
     padding-top: 1vw;
@@ -32,8 +33,16 @@ h1, h2, h3, h4, h5, h6 {
     padding-bottom: 1vw;
 }
 h2 {
+    color: #302858;
     font-size: 1.2rem;
     font-weight: bold;
+}
+h3 {
+    font-weight: bold;
+}
+ul {
+    padding-top: 1vw;
+    padding-bottom: 1vw;
 }
 
 /* Estilo Específico */
@@ -55,8 +64,22 @@ h2 {
     border-radius: 100%;
 
 }
+
+#portifolio {
+    width: 90vw;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.projeto {
+    margin: auto;
+    text-align: center;
+    padding: 1vw;
+    width: 28vw;
+    min-width: 300px;
+}
 .projeto img {
-    width: 10vw;
+    width: 100%;
 }
 
 /* Footer */
