--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-/* --- Estilo da Página --- */
-
 /* Estilo Geral */
 header {
     padding: 5vw;
@@ -7,9 +5,6 @@ header {
     align-items: center;
     text-align: center;
     background-color: #302858;
-    color: #E0C8F8;
-}
-header h1 {
     color: #E0C8F8;
 }
 main {
@@ -26,6 +21,15 @@ footer {
     text-align: center; 
     color: #E0C8F8;
     background-color: #302858;
+}
+button {
+    font-size: 1rem;
+    background-color:#FFF;
+    color:#302858;
+    padding: 1vw;
+    border: solid 2px;
+    border-color: #302858;
+    margin: 1vw;
 }
 p {
     padding-top: 1vw;
@@ -53,21 +57,11 @@ ul {
     padding-top: 1vw;
     padding-bottom: 1vw;
 }
-button {
-    font-size: 1rem;
-    background-color:#FFF;
-    color:#302858;
-    padding: 1vw;
-    border: solid 2px;
-    border-color: #302858;
-    margin: 1vw;
-}
 a {
     text-decoration: none;
 }
 
-/* Estilo Específico - Base/Index */
-/* Header */
+/* Index - Header */
 #introducao {
     width: 45vw;
 }
@@ -78,9 +72,11 @@ a {
     width: 30vw;
     border-radius: 100%;
 }
+header h1 {
+    color: #E0C8F8;
+}
 
-/* Main */
-/* Portifólio */
+/* Portifólio - Index - Main */
 #portifolio {
     width: 90vw;
     display: flex;
@@ -120,7 +116,7 @@ a {
     font-size: 0.7rem;
 }
 
-/* Página Portifólio */
+/* Página Portifólio  */
 #banner-portifolio {
     width: 100%;
 }
@@ -131,34 +127,63 @@ a {
     object-position: top;
 }
 
-/* Carrossel de Imagem */
-
-/* [data-component="slideshow"] .slide {
-	display: none;
-  text-align: center;
+/* Carrossel de Imagens */
+.carrossel {
+    height: 40vw;
+    border-radius: 20px;
+    overflow: hidden;
 }
-
-[data-component="slideshow"] .slide.active {
-	display: block;
-} */
-
-/* 
-#carrossel {
+.navigation {
     width: 90vw;
+    margin-top: 35vw;
+    height: 5vw;
+    position: absolute;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    justify-content: center;
 }
-.imagem-carrossel {
-    margin: auto;
-    text-align: center;
-    padding: 1vw;
-    width: 28vw;
-    min-width: 300px;
+.bar {
+    width: 8vw;
+    height: 2vw;
+    margin-left: 1vw;
+    margin-right: 1vw;
+    border: 2px solid #E0C8F8;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: .6s;
 }
-.imagem-carrossel img {
+.bar:hover {
+    background-color: #302858;
+}
+input {
+    display: none;
+}
+.slides {
+    display: flex;
+    width: 500%;
+    height: 100%;
+}
+.slide {
+    width: 20%;
+    transition: .6s;
+}
+.slide img {
     width: 100%;
-    aspect-ratio: 1/0.6;
+    height: 100%;
     object-fit: cover;
     object-position: top;
-} */
+}
+#slide1:checked ~ .s1 {
+    margin-left: 0;
+}
+#slide2:checked ~ .s1 {
+    margin-left: -20%;
+}
+#slide3:checked ~ .s1 {
+    margin-left: -40%;
+}
+#slide4:checked ~ .s1 {
+    margin-left: -60%;
+}
+#slide5:checked ~ .s1 {
+    margin-left: -80%;
+}
