--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,10 @@ header h1 {
     object-position: top;
     border-radius: 20px;
 }
+.item-portifolio a {
+    width: 100%;
+    height: 100%;
+}
 
 /* Footer */
 #icons {
