--- a/css/reset.css
+++ b/css/reset.css
@@ -1,4 +1,6 @@
 /* --- Reset CSS --- */
+/* Importa as fontes do google */
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -18,7 +20,10 @@ time, mark, audio, video, button {
     border: 0;
     font-size: 100%;
     font: inherit;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: "Source Code Pro", monospace;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
     vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
